--- a/docs/src/@rocketseat/gatsby-theme-docs/text/index.mdx
+++ b/docs/src/@rocketseat/gatsby-theme-docs/text/index.mdx
@@ -1,22 +1,22 @@
 # Introduction
 
-Rocket Docs is a complete and awesome Gatsby Theme for documentation websites. We've
-developed it to be easy to use and customize. Forget about other
-things and focus on what matters: **writing docs.**
+UI Studio is an open source web based UI builder.
 
 ## Features
 
-- ⚛️ Ready for Gatsby v3;
-- 📝 MDX for docs;
-- 🛣 Yaml-based sidebar navigation;
-- 📱 Responsive and mobile friendly;
-- 🖥 Code highlighting with [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer) and [react-live](https://github.com/FormidableLabs/react-live) support;
-- 🥇 SEO (Sitemap, schema.org data, Open Graph and Twitter tags).
-- 📈 Google Analytics support;
-- 📄 Custom docs schema;
-- 🖱 Table of Contents;
-- ⚡️ Offline Support & WebApp Manifest;
-- and much more 🔥
+- Design system agnostic
+- Connect to any REST api via OpenAPI
+- Use community templates to get started or integrate your own design system with React
+- Build reusable components within the UI
+- Open source!
+
+## Motivation
+
+Other UI builders are often too restrictive. They come with a default set of components and offer no (or little) options for customisation and reusability.
+
+* Built for engineers who do not know frontend development
+* Highly customisable UI components while still being reusable
+* Connect to any datasource by just using a REST api
 
 <br />
 
