--- a/docs/src/docs/widgets/introduction.mdx
+++ b/docs/src/docs/widgets/introduction.mdx
@@ -3,14 +3,14 @@
 The UI is built with pages.
 Each page is defined by a tree of widgets.
 A widget is a UI element that is rendered to the screen.
-They are defined with components, either internally, through template/libraries (TODO terminology),
+They are defined with components, either internally, through templates,
 or built within the UI.
 
 A widget is configured through its [config](/widgets/config), [layout](/widgets/layout), [events](/widgets/events), and [styles](/widgets/styles).
 Every widget has styles configuration, but the rest are dependant on the widget's component definition.
 
 Widgets are organised into categories.
-The internal widgets have predefined categories, templates/libraries are categorised based on their configuration,
+The internal widgets have predefined categories, templates are categorised based on their configuration,
 and custom components are categorised as `Components`.
 
 
