--- a/docs/src/docs/components/react.mdx
+++ b/docs/src/docs/components/react.mdx
@@ -254,8 +254,8 @@ other than iterator configuration.
 
 A components props come from three places:
 
-1. `config` Each config item coresponds to a prop. The `key` field will be it's prop name.
-2. `events` Each event coresponds to a prop. The `key` field will be it's prop name.
+1. `config` Each config item corresponds to a prop. The `key` field will be it's prop name.
+2. `events` Each event corresponds to a prop. The `key` field will be it's prop name.
 3. An `onExposedPropertiesChange` prop will be passed to set exposed property values.
 4. An `iteratorIndex` prop will be passed, containing information about any iterable parents
 and the widgets position in the iterator. This is not used for getting a widget's position, but
