--- a/docs/src/docs/components/widgets.mdx
+++ b/docs/src/docs/components/widgets.mdx
@@ -6,6 +6,10 @@ Reusable components are a useful concept for anyone.
 To allow for this it is possible to build a component in the builder.
 This is similar to creating a page.
 
+These components are generic within a project, but not outside of a project.
+To share these components outside of a project you can create a template with a `client.json`
+containing them.
+
 Next to the page selection dropdown, there is a plus button.
 Click this and then click `Component` in the menu that opens.
 This will create new component.
