--- a/docs/src/docs/widgets/config.mdx
+++ b/docs/src/docs/widgets/config.mdx
@@ -24,7 +24,7 @@ object and array.
 It allows the you to enter each array item or object field as a static value.
 
 * Widget: If a widget on the page has an exposed property matching the type of the
-config item it can be used as a value.
+config item it can be used as a value. Widgets from other pages cannot be used.
 
 * Variable: Variable's that match the type of the config item can be used as a value.
 
